syntax = "proto3";
package protos;

import "commonevententities.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";

/* Modeling event payloads
Source:
https://confluence.atlassian.com/bitbucket/event-payloads-740262817.html
*/

// https://confluence.atlassian.com/bitbucket/event-payloads-740262817.html#EventPayloads-Push
message RepoPush {
    Owner actor = 1;
    Repository repository = 2;

    message PushDetail {
        repeated Changeset changes = 1;
    }

    PushDetail push = 3;
}

// same for created and updated
message PullRequest {
    Owner actor = 1;
    PullRequestEntity pullrequest = 2;
    Repository repository = 3;
}

// approved adds timestamp and approving owner's info
message PullRequestApproved {
    Owner actor = 1;
    PullRequestEntity pullrequest = 2;
    Repository repository = 3;
    message approve {
        google.protobuf.Timestamp date = 1;
        Owner user = 2;
    }
    approve approval = 4;
}


message CreateWebhook {
    string description = 1;
    string url = 2;
    bool active = 3;
    repeated string events = 4;
}

message GetWebhooks {
    double pagelen = 1;
    double page = 2;
    double size = 3;
    repeated Webhooks values = 4;
    string next = 5;
}

message Webhooks {
    string description = 1;
    Links links = 2;
    string url = 3;
    google.protobuf.Timestamp createdAt = 4 [json_name="created_at"];
    bool active = 5;
}

// todo: add PR